--- a/templates/edit_link.html
+++ b/templates/edit_link.html
@@ -26,7 +26,7 @@
               <ul class="nav nav-tabs">
                 <li><a href="{{site_root}}"><i class="glyphicon glyphicon-globe"></i></a></li>
                 {{#user}}
-                  <li class="pull-right"><a class="btn btn-info" href="{{site_root}}auth">{{.}}</a></li>
+                  <li class="pull-right"><a class="btn btn-info" href="{{site_root}}auth/">{{.}}</a></li>
                   <li class="pull-right"><a class="btn btn-primary" href="{{site_root}}link"><i class="glyphicon glyphicon-folder-open"></i></a></li>
                 {{/user}}
               </ul>
