--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}}</title>
+    <link rel="icon" type="image/x-icon" href="{{site_root}}favicon.ico">
 
     <!-- Bootstrap -->
     <link href="{{site_root}}assets/css/bootstrap.min.css" rel="stylesheet">
