Less confusing bookmarklet look

--- a/templates/edit_links.html
+++ b/templates/edit_links.html
@@ -34,8 +34,8 @@
                 <h3>
                   <i class="glyphicon glyphicon-folder-open"></i> {{title}}
                   <small>(Por aldoni ligojn pli komforte, bonvole treni la legosigno:
-                    <a class="btn btn-info btn-xs"
-                      href="javascript:(function(){window.open('{{here}}?create=Vera&cl='+encodeURIComponent(document.getElementsByTagName('html')[0].lang||'en')+'&ct='+encodeURIComponent(document.title)+'&cu='+encodeURIComponent(location),'_blank');return%20void(0);})();">Ligilo</a>)</small></h3>
+                    <a class="btn btn-link"
+                      href="javascript:(function(){window.open('{{here}}?create=Vera&cl='+encodeURIComponent(document.getElementsByTagName('html')[0].lang||'en')+'&ct='+encodeURIComponent(document.title)+'&cu='+encodeURIComponent(location),'_blank');return%20void(0);})();"><span class="glyphicon glyphicon-hand-up"></span> Ligilo</a>)</small></h3>
               {{#success}}<div class="alert alert-success">Skribis al la datenbazo.</div>{{/success}}
 {{{debug}}}
             </div><!-- /.panel-header -->
