--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                 <li class="pull-right"><a target="_blank" href="https://github.com/thedod/ligiloj#readme"><i class="glyphicon glyphicon-wrench"></i></a></li>
                 {{#user}}
                   <li class="pull-right"><a class="btn btn-info" href="{{site_root}}auth/">{{.}}</a></li>
-                  <li class="pull-right"><a class="btn btn-primary" href="link"><i class="glyphicon glyphicon-folder-open"></i></a></li>
+                  <li class="pull-right"><a class="btn btn-primary" href="{{site_root}}link/"><i class="glyphicon glyphicon-folder-open"></i></a></li>
                 {{/user}}
               </ul>
               {{#active_language}}
