--- a/templates/edit_links.html
+++ b/templates/edit_links.html
@@ -28,14 +28,15 @@
                 <li><a href="{{site_root}}"><i class="glyphicon glyphicon-globe"></i></a></li>
                 {{#user}}
                   <li class="pull-right"><a class="btn btn-info" href="{{site_root}}auth/">{{.}}</a></li>
-                  <li class="pull-right"><a class="btn btn-primary" href="?create=Vera"><i class="glyphicon glyphicon-plus"></i></a></li>
+                  <li class="pull-right"><a class="btn btn-primary" href="?create=Vera"><span class="glyphicon glyphicon-plus"></span>ligilo</a></li>
                 {{/user}}
               </ul>
                 <h3>
                   <i class="glyphicon glyphicon-folder-open"></i> {{title}}
                   <small>(Por aldoni ligojn pli komforte, bonvole treni la legosigno:
                     <a class="btn btn-link"
-                      href="javascript:(function(){window.open('{{here}}?create=Vera&cl='+encodeURIComponent(document.getElementsByTagName('html')[0].lang||'en')+'&ct='+encodeURIComponent(document.title)+'&cu='+encodeURIComponent(location),'_blank');return%20void(0);})();"><span class="glyphicon glyphicon-hand-up"></span> Ligilo</a>)</small></h3>
+                      href="javascript:(function(){window.open('{{here}}?create=Vera&cl='+encodeURIComponent(document.getElementsByTagName('html')[0].lang||'en')+'&ct='+encodeURIComponent(document.title)+'&cu='+encodeURIComponent(location),'_blank');return%20void(0);})();"><span class="glyphicon glyphicon-hand-up"></span>
+                        +ligilo</a>)</small></h3>
               {{#success}}<div class="alert alert-success">Skribis al la datenbazo.</div>{{/success}}
 {{{debug}}}
             </div><!-- /.panel-header -->
