--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap -->
     <link href="{{site_root}}assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{site_root}}assets/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link rel="alternate" type="application/rss+xml" href="{{site_root}}rss{{#active_language}}/{{code}}{{/active_language}}" title="{{title}}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
