--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{title}} - {{site_title}}</title>
+    <title>{{title}}</title>
     <link rel="icon" type="image/x-icon" href="{{site_root}}favicon.ico">
 
     <!-- Bootstrap -->
