Fancy language badge at /

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
                   {{#links}}
                     <li{{#is_rtl}} dir=rtl align=right{{/is_rtl}}>
                       <a target="_blank"
-                          href="{{url}}">{{#is_international}}{{name}}: {{/is_international}}{{ title }}</a>
+                          href="{{url}}">{{#is_international}}<span class="badge">{{name}}</span> {{/is_international}}{{ title }}</a>
                     </li>
                   {{/links}}
                 </ul>
