--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="{{site_root}}favicon.ico">
 
     <!-- Bootstrap -->
-    <link href="{{site_root}}assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{site_root}}assets/css/bootstrap-simplex-local-font.min.css" rel="stylesheet">
     <link href="{{site_root}}assets/css/bootstrap-theme.min.css" rel="stylesheet">
     <link rel="alternate" type="application/rss+xml" href="{{site_root}}rss{{#active_language}}/{{code}}{{/active_language}}" title="{{title}}">
 
