--- a/templates/edit_link.html
+++ b/templates/edit_link.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="{{site_root}}favicon.ico">
 
     <!-- Bootstrap -->
-    <link href="{{site_root}}assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{site_root}}assets/css/bootstrap-simplex-local-font.min.css" rel="stylesheet">
     <link href="{{site_root}}assets/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
