Added skin support
[Hopefully] fixed some of my lame Esperanto

--- a/templates/edit_link.html
+++ b/templates/edit_link.html
@@ -47,7 +47,7 @@
                 {{/form}}
                 <div class="form-group">
                   {{^create}}
-                    <label class="col-sm-2 control-label text-left text-danger" for="srsly_delete"><i class="glyphicon glyphicon-remove"></i> Forviŝi!</label>
+                    <label class="col-sm-2 control-label text-left text-danger" for="srsly_delete"><i class="glyphicon glyphicon-remove"></i> Forviŝu!</label>
                     <div class="col-sm-2 text-right"><input class="form-control" id="srsly_delete" name="srsly_delete" type="checkbox"></div>
                     <div class="col-sm-8 text-right">
                   {{/create}}
