--- a/templates/edit_links.html
+++ b/templates/edit_links.html
@@ -28,7 +28,7 @@
                 <li><a href="{{site_root}}"><i class="glyphicon glyphicon-globe"></i></a></li>
                 {{#user}}
                   <li class="pull-right"><a class="btn btn-info" href="{{site_root}}auth/">{{.}}</a></li>
-                  <li class="pull-right"><a class="btn btn-primary" href="?create=Vera"><span class="glyphicon glyphicon-plus"></span>ligilo</a></li>
+                  <li class="pull-right"><a class="btn btn-primary" href="?create=Vera"><span class="glyphicon glyphicon-plus"></span>ligilon</a></li>
                 {{/user}}
               </ul>
                 <h3>
@@ -36,7 +36,7 @@
                   <small>(Por aldoni ligojn pli komforte, bonvole treni la legosigno:
                     <a class="btn btn-link"
                       href="javascript:(function(){window.open('{{here}}?create=Vera&cl='+encodeURIComponent(document.getElementsByTagName('html')[0].lang||'en')+'&ct='+encodeURIComponent(document.title)+'&cu='+encodeURIComponent(location),'_blank');return%20void(0);})();"><span class="glyphicon glyphicon-hand-up"></span>
-                        +ligilo</a>)</small></h3>
+                        +ligilon</a>)</small></h3>
               {{#success}}<div class="alert alert-success">Skribis al la datenbazo.</div>{{/success}}
 {{{debug}}}
             </div><!-- /.panel-header -->
