Fix some more auth/cache botches

--- a/templates/edit_links.html
+++ b/templates/edit_links.html
@@ -33,7 +33,7 @@
               </ul>
                 <h3>
                   <i class="glyphicon glyphicon-folder-open"></i> {{title}}
-                  <small>(Por aldoni ligojn pli komforte, bonvole treni la legosigno:
+                  <small>(Por aldoni ligilojn pli komforte, bonvole trenu la legosigno:
                     <a class="btn btn-link"
                       href="javascript:(function(){window.open('{{here}}?create=Vera&cl='+encodeURIComponent(document.getElementsByTagName('html')[0].lang||'en')+'&ct='+encodeURIComponent(document.title)+'&cu='+encodeURIComponent(location),'_blank');return%20void(0);})();"><span class="glyphicon glyphicon-hand-up"></span>
                         +ligilon</a>)</small></h3>
