Another Esperanto fix :s

--- a/templates/edit_link.html
+++ b/templates/edit_link.html
@@ -54,7 +54,7 @@
                   {{#create}}
                     <div class="col-sm-12 text-right">
                   {{/create}}
-                    <input type="submit" class="btn btn-primary btn-lg" Value="Fari ĝin tiel">
+                    <input type="submit" class="btn btn-primary btn-lg" Value="Faru ĝin tiel">
                   </div>
                 </div>
               </form>
